# sovereign-ai

./: .env.example  .gitignore  Dockerfile.mcpo  README.md  docker-compose.yml  docker-compose.yml.bak  sovereign-ai.sh  start.sh  status.sh  stop.sh
configs/: CAP_MASTER_SYSTEM_PROMPT.md  api-providers.yaml  continue-config.json  free-cloud-apis.md  mcpo-config.json  notebook.env  openwebui-tools.md  system-prompts.md  theme.css
docs/: walkthrough.html
functions/actions/: quick_actions.py
functions/filters/: safety_filter.py
functions/pipes/: memory_pipe.py
mcp-servers/api-gateway/: server.py
mcp-servers/shell-confirm/: pyproject.toml  server.py
mcp-servers/sovereign-agent/: Dockerfile  agent.py
mcp-servers/sovereign-agent/prompts/: __init__.py  system_prompts.py
mcp-servers/sovereign-agent/safety/: __init__.py  audit.py  classifier.py  confirmation.py
mcp-servers/sovereign-agent/tools/: __init__.py  base.py  docker.py  file.py  memory.py  shell.py  web.py
mcp-servers/system-monitor/: server.py
scripts/: inactivity-monitor.sh  install-comfyui.sh  install-continue.sh  pull-models.sh  start.sh  system-setup.sh  update.sh  verify-setup.sh
tools/: auto_memory.json  smart_mind_map.json  sub_agent_tool.json  tl;dr_-_the_hybrid_context_manager_[rag_+_summarization].json  visuals_toolkit_-_tables,_charts_&_diagrams_for_openwebui_.json  visuals_toolkit_v2.json
tools/community/: code_execution.py  image_generation.py  web_search.py
tools/custom/: system_control.py
